[gd_scene load_steps=15 format=2]

[ext_resource path="res://Hud/scripts/Hud.gd" type="Script" id=1]
[ext_resource path="res://Hud/scripts/KeysInterfaceContainer.gd" type="Script" id=2]
[ext_resource path="res://Hud/WeaponHudButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Hud/InventoryHudButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Hud/TurnTimer.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/settings_gear.webp" type="Texture" id=6]
[ext_resource path="res://Hud/scripts/SettingsClick.gd" type="Script" id=7]
[ext_resource path="res://Hud/EventMessageHolder.tscn" type="PackedScene" id=8]
[ext_resource path="res://Hud/Death.tscn" type="PackedScene" id=9]
[ext_resource path="res://Hud/scripts/Death.gd" type="Script" id=10]
[ext_resource path="res://Hud/ClickableRegion.tscn" type="PackedScene" id=11]
[ext_resource path="res://Hud/TeleportWarning.tscn" type="PackedScene" id=12]
[ext_resource path="res://Hud/UpgradeScreen.tscn" type="PackedScene" id=13]
[ext_resource path="res://Hud/ContextualMenu.tscn" type="PackedScene" id=14]

[node name="HudNode" type="Node2D"]
script = ExtResource( 1 )

[node name="HudCanvasLayer" type="CanvasLayer" parent="."]

[node name="ActiveSlot" type="Node2D" parent="HudCanvasLayer"]

[node name="InactiveSlot" type="Node2D" parent="HudCanvasLayer"]
position = Vector2( 20, 0 )

[node name="Keys" type="Node2D" parent="HudCanvasLayer"]
position = Vector2( 45.7208, 372.52 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )

[node name="WeaponSlots" parent="HudCanvasLayer" instance=ExtResource( 3 )]
position = Vector2( 33, 1739 )
scale = Vector2( 0.65, 0.65 )

[node name="HealthBar" type="Node2D" parent="HudCanvasLayer"]
position = Vector2( -47.11, 32.2845 )
scale = Vector2( 2, 2 )

[node name="FoodInvent" parent="HudCanvasLayer" instance=ExtResource( 4 )]
position = Vector2( 770, 1780 )
scale = Vector2( 0.5, 0.5 )
frameStyle = "Yellow"
type = "Food"

[node name="PotInvent" parent="HudCanvasLayer" instance=ExtResource( 4 )]
position = Vector2( 620, 1780 )
scale = Vector2( 0.5, 0.5 )
frameStyle = "Green"
type = "Potion"

[node name="SpellInvent" parent="HudCanvasLayer" instance=ExtResource( 4 )]
position = Vector2( 920, 1780 )
scale = Vector2( 0.5, 0.5 )
frameStyle = "Orange"
type = "Spell"

[node name="Turn Timer" parent="HudCanvasLayer" instance=ExtResource( 5 )]
position = Vector2( 985.047, 118.504 )
scale = Vector2( 0.2, 0.2 )

[node name="Settings" type="TextureButton" parent="HudCanvasLayer"]
margin_left = 985.94
margin_top = 26.1055
margin_right = 1241.94
margin_bottom = 282.105
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 6 )
script = ExtResource( 7 )

[node name="EventMessageHolder" parent="HudCanvasLayer" instance=ExtResource( 8 )]
position = Vector2( 31.4499, 114.573 )

[node name="DeathMenu" parent="HudCanvasLayer" instance=ExtResource( 9 )]
visible = false
script = ExtResource( 10 )

[node name="GameClickableRegion" parent="HudCanvasLayer" instance=ExtResource( 11 )]
visible = false
margin_left = -9.0
margin_top = -8.0
margin_right = 1089.0
margin_bottom = 1930.0

[node name="Teleport Warning" parent="HudCanvasLayer" instance=ExtResource( 12 )]
visible = false

[node name="UpgradeMenu" parent="HudCanvasLayer" instance=ExtResource( 13 )]
visible = false

[node name="ContextualMenu" parent="." instance=ExtResource( 14 )]
visible = false

[node name="TutorialTextPrompts" type="Node2D" parent="."]
[connection signal="clicked_inside" from="HudCanvasLayer/GameClickableRegion" to="." method="_on_GameClickableRegion_clicked_inside"]
